--- a/ShppingCartv2/ShppingCartv2.csproj
+++ b/ShppingCartv2/ShppingCartv2.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
